--- a/index.html
+++ b/index.html
@@ -5,105 +5,133 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>WebStudio</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
+
 	<body>
-		<header>
-			<nav>
-				<a href="./index.html">
-					<span>Web</span>
-					<span>Studio</span>
+		<header class="header">
+			<nav class="header-nav">
+				<a href="./index.html" class="logo">
+					<span class="web-blue">Web</span>
+					<span class="studio-black">Studio</span>
 				</a>
-				<ul>
-					<li><a href="./studio.html">Студия</a></li>
-					<li><a href="./portfolio.html">Портфолио</a></li>
-					<li><a href="./contacts.html">Контакты</a></li>
+				<ul class="header-nav-list">
+					<li class="nav-item"><a class="item" href="./index.html">Студия</a></li>
+					<li class="nav-item"><a class="item" href="./portfolio.html">Портфолио</a></li>
+					<li class="nav-item"><a class="item" href="./contacts.html">Контакты</a></li>
 				</ul>
 			</nav>
-			<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-			<a href="tel:+380961111111">+38 096 111 11 11</a>
+			<ul class="header-contacts">
+				<li class="header-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li class="header-tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			</ul>
+			<button class="orange-like-tomato" type="button">orange-like-tomato</button>
+			<button class="orange-like-rainbow" type="button">orange-like-rainbow</button>
+			<button class="orange-like-lemon" type="button">orange-like-lemon</button>
+			<button class="orange-like-dog" type="button">orange-like-dog</button>
+			<button class="orange-like-disko" type="button">orange-like-disco</button>
 		</header>
 
-		<main>
-			<section>
-				<h1>Эффективные решения для вашего бизнеса</h1>
-				<button type="button">Заказать услугу</button>
+		<main class="studio">
+			<section class="studio-hero">
+				<h1 class="studio-banner">Эффективные решения для вашего бизнеса</h1>
+				<button type="button" class="hero-button">Заказать услугу</button>
 			</section>
-			<section>
-				<h2 hidden>Преимущества</h2>
-				<ul>
-					<li>
-						<h3>Внимание к деталям</h3>
-						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+			<section class="studio-advantage">
+				<h2 class="advantage-banner">Преимущества</h2>
+				<ul class="advantage-list">
+					<li class="advantage-item">
+						<h3 class="advantage-item-banner">Внимание к деталям</h3>
+						<p class="advantage-item-text">
+							Идейные соображения, а также начало повседневной работы по формированию позиции.
+						</p>
 					</li>
 					<li>
-						<h3>Пунктуальность</h3>
-						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+						<h3 class="advantage-item-banner">Пунктуальность</h3>
+						<p class="advantage-item-text">
+							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+						</p>
 					</li>
 					<li>
-						<h3>Планирование</h3>
-						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+						<h3 class="advantage-item-banner">Планирование</h3>
+						<p class="advantage-item-text">
+							Равным образом консультация с широким активом в значительной степени обуславливает.
+						</p>
 					</li>
 					<li>
-						<h3>Современные технологии</h3>
-						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+						<h3 class="advantage-item-banner">Современные технологии</h3>
+						<p class="advantage-item-text">
+							Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+						</p>
 					</li>
 				</ul>
 			</section>
-			<section>
-				<h2>Чем мы занимаемся</h2>
-				<ul>
-					<li>
+			<section class="studio-act">
+				<h2 class="act-banner">Чем мы занимаемся</h2>
+				<ul class="actions">
+					<li class="act-type">
 						<img src="./images/box1.jpg" alt="Вечерний офис" width="370" />
 					</li>
-					<li>
+					<li class="act-type">
 						<img src="./images/box2.jpg" alt="Дневной офис" width="370" />
 					</li>
-					<li>
+					<li class="act-type">
 						<img src="./images/box3.jpg" alt="Палитра цветов" width="370" />
 					</li>
 				</ul>
 			</section>
-			<section>
-				<h2>Наша команда</h2>
-				<ul>
-					<li>
+			<section class="studio-team">
+				<h2 class="team-banner">Наша команда</h2>
+				<ul class="team-list">
+					<li class="team-item">
 						<img src="images/face1.jpg" alt="Игорь Демьяненко" width="270" />
-						<h3>Игорь Демьяненко</h3>
-						<p lang="en">Product Designer</p>
+						<h3 class="team-name">Игорь Демьяненко</h3>
+						<p lang="en" class="team-job">Product Designer</p>
 					</li>
-					<li>
+					<li class="team-item">
 						<img src="images/face2.jpg" alt="Ольга Репина" width="270" />
-						<h3>Ольга Репина</h3>
-						<p lang="en">Frontend Developer</p>
+						<h3 class="team-name">Ольга Репина</h3>
+						<p lang="en" class="team-job">Frontend Developer</p>
 					</li>
-					<li>
+					<li class="team-item">
 						<img src="images/face3.jpg" alt="Николай Тарасов" width="270" />
-						<h3>Николай Тарасов</h3>
-						<p lang="en">Marketing</p>
+						<h3 class="team-name">Николай Тарасов</h3>
+						<p lang="en" class="team-job">Marketing</p>
 					</li>
-					<li>
+					<li class="team-item">
 						<img src="images/face4.jpg" alt="Михаил Ермаков" width="270" />
-						<h3>Михаил Ермаков</h3>
-						<p lang="en">UI Designer</p>
+						<h3 class="team-name">Михаил Ермаков</h3>
+						<p lang="en" class="team-job">UI Designer</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 
-		<footer>
-			<a href="./index.html">
-				<span>Web</span>
-				<span>Studio</span>
+		<footer class="footer">
+			<a href="./index.html" class="logo">
+				<span class="web-blue">Web</span>
+				<span class="studio-white">Studio</span>
 			</a>
-			<address>
-				<ul>
-					<li>
-						<a href="https://goo.gl/maps/Ut4Wyp9AqgRRf6S79" target="_blank" rel="noopener noreferrer nofollow ">
+			<address class="footer-address">
+				<ul class="footer-address-list">
+					<li class="address-map">
+						<a
+							class="map"
+							href="https://goo.gl/maps/Ut4Wyp9AqgRRf6S79"
+							target="_blank"
+							rel="noopener noreferrer nofollow "
+						>
 							г. Киев, пр-т Леси Украинки, 26
 						</a>
 					</li>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li class="address-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li class="address-tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
