--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>WebStudio</title>
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
 		<header>
@@ -14,18 +15,77 @@
 					<span>Studio</span>
 				</a>
 				<ul>
-					<li><a href="./studio.html">Студия</a></li>
+					<li><a href="./index.html">Студия</a></li>
 					<li><a href="./portfolio.html">Портфолио</a></li>
 					<li><a href="./contacts.html">Контакты</a></li>
 				</ul>
 			</nav>
-			<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-			<a href="tel:+380961111111">+38 096 111 11 11</a>
+			<ul>
+				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			</ul>
 		</header>
 
-		<main>
-			<section>
-				<h1></h1>
+		<main class="portf">
+			<section class="portf-btn">
+				<h1 class="portf-btn-banner" hidden>Типы проэктов</h1>
+				<ul class="portf-btn-list">
+					<li class="portf-btn-type"><button type="button">Все</button></li>
+					<li class="portf-btn-type"><button type="button">Веб-сайты</button></li>
+					<li class="portf-btn-type"><button type="button">Приложения</button></li>
+					<li class="portf-btn-type"><button type="button">Дизайн</button></li>
+					<li class="portf-btn-type"><button type="button">Маркетинг</button></li>
+				</ul>
+			</section>
+			<section class="portf-proj">
+				<h2 class="portf-proj-banner" hidden>Последние проэкты</h2>
+				<ul class="portf-proj-list">
+					<li class="portf-proj">
+						<img src="images/portfolio1.jpg" alt="Веб-сайт Технокряк" width="370" />
+						<h3 class="proj-name">Технокряк</h3>
+						<p class="proj-type">Веб-сайт</p>
+					</li>
+					<li class="portf-proj">
+						<img src="images/portfolio2.jpg" alt="Дизайн постера New Orlean vs Golden Star" width="370" />
+						<h3 class="proj-name">Постер New Orlean vs Golden Star</h3>
+						<p class="proj-type">Дизайн</p>
+					</li>
+					<li class="portf-proj">
+						<img src="images/portfolio3.jpg" alt="Приложение ресторана Seafood" width="370" />
+						<h3 class="proj-name">Ресторан Seafood</h3>
+						<p class="proj-type">Приложение</p>
+					</li>
+					<li class="portf-proj">
+						<img src="images/portfolio4.jpg" alt="Маркетинговый проект Prime" width="370" />
+						<h3 class="proj-name">Проект Prime</h3>
+						<p class="proj-type">Маркетинг</p>
+					</li>
+					<li class="portf-proj">
+						<img src="images/portfolio5.jpg" alt="Приложение проекта Boxes" width="370" />
+						<h3 class="proj-name">Проект Boxes</h3>
+						<p class="proj-type">Приложение</p>
+					</li>
+					<li class="portf-proj">
+						<img src="images/portfolio6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370" />
+						<h3 class="proj-name" lang="en">Inspiration has no Borders</h3>
+						<p class="proj-type">Веб-сайт</p>
+					</li>
+					<li class="portf-proj">
+						<img src="images/portfolio7.jpg" alt="Дизайн издания Limited Edition" width="370" />
+						<h3 class="proj-name">Издание Limited Edition</h3>
+						<p class="proj-type">Дизайн</p>
+					</li>
+					<li class="portf-proj">
+						<img src="images/portfolio8.jpg" alt="Маркетинговый проект LAB" width="370" />
+						<h3 class="proj-name">Проект LAB</h3>
+						<p class="proj-type">Маркетинг</p>
+					</li>
+					<li class="portf-proj">
+						<img src="images/portfolio9.jpg" alt="Приложение Growing Business" width="370" />
+						<h3 class="proj-name" lang="en">Growing Business</h3>
+						<p class="proj-type">Приложение</p>
+					</li>
+				</ul>
 			</section>
 		</main>
 
